--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
   "name": "mirror-display",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mirror Display",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec 'npm run client:dev && npm run server:dev' --ext js,json --watch src/server",
+    "dev": "nodemon --exec 'npm run client:build && npm run server:dev' --ext js,json --watch src/server",
     "server:stop": "pkill --signal SIGINT server-mirror-display || true",
-    "server:clean": "rm -rf dist/server",
-    "server:build": "webpack --progress --colors --config src/server/webpack.config.js",
+    "server:clean": "rm -rf dist/server && rm -rf dist/config",
+    "server:build": "npm run server:clean && webpack --progress --colors --config src/server/webpack.config.js",
     "server:start": "node dist/server/server.bundle.js server-mirror-display",
     "server:dev": "npm run server:stop && npm run server:clean && npm run server:build && npm run server:start",
     "client:clean": "rm -rf dist/client",
-    "client:build": "mkdir -p dist/client && cp src/client/index.html dist/client && webpack --progress --colors --config src/client/webpack.config.js",
-    "client:dev": "npm run client:clean && npm run client:build"
+    "client:statics": "mkdir -p dist/client && cp src/client/client.html dist/client && cp -R src/client/assets dist/client/assets",
+    "client:build": "npm run client:clean && npm run client:statics && webpack --progress --colors --config src/client/webpack.config.js",
+    "client:dev": "npm run client:clean && npm run client:statics && webpack-dev-server --content-base dist/client --progress --colors --hot --inline --config src/client/webpack.config.js",
+    "build": "npm run server:clean && npm run server:build && npm run client:clean && npm run client:build",
+    "start": "forever dist/server/server.bundle.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexander Heimbuch (github@heimbu.ch)",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^3.4.1",
-    "engine.io": "^1.6.11",
-    "engine.io-client": "^1.6.11",
-    "express": "^4.14.0",
+    "bluebird": "3.4.1",
+    "cheerio": "0.22.0",
+    "clientconfig": "1.1.1",
+    "config": "1.21.0",
+    "engine.io": "1.6.11",
+    "engine.io-client": "1.6.11",
+    "express": "4.14.0",
     "forecast.io-bluebird": "0.0.1",
-    "lodash": "^4.14.1",
+    "forever": "0.15.2",
+    "lodash": "4.14.1",
     "moment": "2.14.1",
-    "node-schedule": "^1.1.1",
-    "node-uuid": "^1.4.7",
+    "node-schedule": "1.1.1",
+    "node-yaml-config": "0.0.4",
+    "normalize.css": "4.2.0",
+    "phantom": "2.1.20",
     "react": "15.3.0",
     "react-dom": "15.3.0",
-    "react-redux": "^4.4.5",
+    "react-redux": "4.4.5",
     "redux": "3.5.2",
-    "rethinkdb": "^2.3.2"
+    "winston": "2.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
@@ -44,10 +53,11 @@
     "css-loader": "0.23.1",
     "file-loader": "0.8.5",
     "html-loader": "0.4.3",
-    "json-loader": "^0.5.4",
+    "json-loader": "0.5.4",
     "node-sass": "3.8.0",
-    "nodemon": "^1.10.0",
-    "npm-watch": "^0.1.5",
+    "nodemon": "1.10.0",
+    "npm-watch": "0.1.5",
+    "raw-loader": "0.5.1",
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
